--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
         "mythril-vsc.executionMode": {
           "type": "string",
           "default": "local",
-          "enum": ["docker", "local"],
+          "enum": [
+            "docker",
+            "local"
+          ],
           "enumDescriptions": [
             "Use Docker for Mythril analysis",
             "Use locally installed Mythril"
@@ -72,12 +75,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.89.0",
+    "@eslint/js": "^9.8.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
+    "@types/vscode": "^1.89.0",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
+    "typescript": "^5.4.5"
   }
 }
