--- a/package.json
+++ b/package.json
@@ -80,15 +80,8 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "18.x",
-    "@types/vscode": "^1.89.0",
-    "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.3.9",
-    "dockerode": "^4.0.2",
     "eslint": "^9.9.0",
-    "globals": "^15.8.0",
-    "typescript": "^5.4.5"
+    "dockerode": "^4.0.2",
+    "globals": "^15.8.0"
   }
 }
