--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "displayName": "Mythril for VSC",
   "description": "An extension to analyze smart contracts with Mythril in Visual Studio Code.",
   "version": "0.0.1",
+  "publisher": "elenadt",
+  "license": "SEE LICENSE IN LICENSE.txt",
+  "keywords": [
+    "vscode",
+    "mythril",
+    "solidity",
+    "smart contracts",
+    "security"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ElenaDT/Tesi_code.git"
